# taji

./: .gitignore  Cargo.toml  LICENSE  README.md  test.tj
contoh/: README.md  algoritma.tj  crypto_tracker.tj  demo_lengkap.tj  halo.tj  halo_dunia.tj  interaktif.tj  looping.tj  modul_matematika.tj  perulangan.tj  project_database.tj  pustaka_standar.tj  sintaks_dasar.tj  uji_galat_modul.tj  uji_taji_modul.tj  uji_tpm.tj  utama.tj
contoh/data/: database_pegawai.json  riwayat_crypto.json
contoh/modul/: koleksi.tj  matematika.tj  teks.tj  validasi.tj
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_kompilator.rs
src/: bawaan.rs  keluaran.rs  lib.rs  main.rs  masukan.rs  tpm.rs  warna.rs
src/ast/: mod.rs
src/code/: definisi.rs  encoder.rs  mod.rs
src/compiler/: galat.rs  mod.rs  tabel_simbol.rs
src/evaluator/: mod.rs
src/lexer/: mod.rs
src/object/: mod.rs
src/parser/: mod.rs
src/repl/: mod.rs
src/token/: mod.rs
src/vm/: galat.rs  mod.rs
tests/: evaluator_tests.rs  lexer_tests.rs  parser_tests.rs  stress_tests.rs
vscode-tajilang/: README.md  package.json  tajilang.vsix
vscode-tajilang/syntaxes/: taji.tmLanguage.json
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/public/taji-wasm/: README.md  package.json  taji_lib.d.ts  taji_lib.js  taji_lib_bg.wasm  taji_lib_bg.wasm.d.ts
