[package]
name = "taji"
version = "1.1.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
# Nama lib dipisah dari binary untuk mencegah output filename collision (.pdb)
# yang akan menjadi hard error di versi Cargo mendatang.
name = "taji_lib"

[[bin]]
name = "taji"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
